modificado por Ale Paciotti

--- a/index.html
+++ b/index.html
@@ -6,5 +6,6 @@
     <body> 
         <h1> Probando GIT </h1>
         <p> Un poquito aburrido... </p>
+        <p>Decime algo lindo...</p>
     </body>
 </html>
