add the branch header

--- a/index.html
+++ b/index.html
@@ -4,8 +4,10 @@
         <title> Clase 3 con GIT</title>
     </head>
     <body> 
+        <header> Probando la rama header</header>
         <h1> Probando GIT </h1>
         <p> Un poquito aburrido... </p>
         <p>Decime algo lindo...</p>
+        
     </body>
 </html>
